[package]
name = "ra-net"
version = "0.2.0"
edition = "2021"

[workspace]
members = [ "examples/*" ]

[dependencies]
crossbeam = "^0.8"
bytemuck = { version = "^1.13", features = ["extern_crate_std", "derive"] }
# xxhash-rust = { version = "0.8.6", features = ["const_xxh32"] }
# capnp = "^0.17"
socket2 = { version = "^0.5" }
# mio = "^0.8"
thiserror = "^1.0"
bitflags = "^2.3"
arraydeque = "^0.5"
lazy_static = "^1.4"
dashmap = "^5.4"
parking_lot = "^0.12"
tracing = "^0.1"

futures = "^0.3"
flume = "^0.10"
smol = "^1.3"
scopeguard = "^1.1"

# security
rand = { version = "^0.8", features = [ "nightly" ] }
rand_chacha = { version = "^0.3" }
curve25519-dalek = { version = "4.0.0-rc.3", features = [] }
ed25519-dalek = "2.0.0-rc.3" # key exchange
x25519-dalek = "2.0.0-rc.3"
chacha20poly1305 = "^0.10" # stream encryption
tai64 = "^4.0"
hkdf = "^0.12"
blake3 = { version = "^1.4", features = ["traits-preview"] }
digest = { version = "^0.10", features = ["std"] }
# snow = { version = "^0.9", features = ["nightly"] }

# ggrs = { git = "https://github.com/gschup/ggrs", features=[ "sync-send" ], optional = true }
# bincode = { version = "^1.3", optional = true}

[build-dependencies]
# built = "^0.6"
# capnpc = "^0.17"

[features]
default = [ ]
# serde = [ "ed25519-dalek/serde" ]
# default = ["ggrs"]
# ggrs = ["dep:ggrs", "dep:bincode"]

